--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
 asgiref==3.8.1
+certifi==2024.2.2
 Django==4.2.7
+django-elasticsearch-dsl==8.0
 djangorestframework==3.14.0
+elastic-transport==8.13.0
+elasticsearch==8.11.0
+elasticsearch-dsl==8.11.0
+python-dateutil==2.9.0.post0
 pytz==2024.1
+six==1.16.0
 sqlparse==0.5.0
 typing_extensions==4.11.0
+urllib3==2.2.1
